# aquilo-offline

./: .gitignore  Cargo.toml  LICENSE  README.md  repository.yaml
.github/workflows/: addon.yml  ci.yml
addon/aquilo-server/: DOCS.md  Dockerfile  README.md  build.yaml  config.yaml  run.sh
addon/aquilo-server/translations/: en.yaml
aquilo-core/: Cargo.toml
aquilo-core/src/: battery.rs  calibration.rs  history.rs  lib.rs  reading.rs  state.rs
aquilo-server/: Cargo.toml  config.example.toml  config.toml
aquilo-server/src/: broker.rs  clock.rs  config.rs  lib.rs  main.rs  mqtt_wire.rs  onboard.rs  reading.rs  server.rs  state.rs  topics.rs
aquilo-server/tests/: onboard.rs  protocol.rs
aquilo-store/: Cargo.toml
aquilo-store/src/: lib.rs
capture/: README.md  broker.js  capture.py  gen-cert.sh  package-lock.json  package.json  proxy.js  san.cnf
