[workspace]
resolver = "2"
members = ["aquilo-server"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rumqttc = "0.25"
rumqttd = "0.20"
toml = "0.8"
chrono = { version = "0.4", features = ["clock"], default-features = false }
